<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">与邻生活</string>
    <string name="service_name">与邻生活消息服务</string>
    <string name="about_500me_life">关于与邻生活</string>
    <string name="main_menu_index">首页</string>
    <string name="main_menu_neighbour">近邻</string>
    <string name="main_menu_concern">关注</string>
    <string name="main_menu_neighbourtalk">邻语</string>
    <string name="main_menu_aboutme">我的</string>
    <string name="last_update">上次更新</string>
    <string name="pull_refresh">下拉刷新</string>
    <string name="select_city">城市</string>
    <string name="select_district">区(县)</string>
    <string name="select_areainfo">小区</string>
    <string name="pyszm">拼音首字母 (如北京:BJ)</string>
    <string name="clickinarea">点击进入该小区</string>
    <string name="clickinmerchant">点击进入该商家</string>
    <string name="needconcerarea">请先关注你的小区</string>
    <string name="need_login_first">请先登录再操作</string>
    <string name="concern_area_success">关联小区成功</string>
    <string name="login_success">登录成功</string>
    <string name="public_post_need_login">请先登录再发帖</string>
    <string name="choice_forum_position">请先选择要发布的栏目位置</string>
    <string name="add_concern">+关注</string>
    <string name="have_concern">已关注</string>
    <string name="cancel_concern">取消关注</string>
    <string name="now_concerning">正在关注</string>
    <string name="now_cancel_concerning">正在取消关注</string>
    <string name="concern_success">关注成功</string>
    <string name="cancel_concern_success">取消关注成功</string>
    <string name="concern_failure">关注失败</string>
    <string name="cancel_concern_failure">取消关注失败</string>
    <string name="have_no_merchant_telphone">暂无商家电话</string>
    <string name="publish_ing">正在发布</string>
    <string name="publish_success">发布成功</string>
    <string name="can_not_send_empty_message">不能发空消息</string>
    <string name="update_at">updated at:&#160;</string>
    <string name="image_content">Image</string>
    <string name="iamman">我是先生</string>
    <string name="iamwoman">我是女士</string>
    <string name="iamsecret">保持神秘</string>
    <string name="need_agree_protocal">需要同意500米生活网相关协议方可注册</string>
    <string name="merchant_info">商家信息</string>
    <string name="shop_name">商家名称</string>
    <string name="shop_addr">商家地址</string>
    <string name="shop_telphone">联系电话</string>
    <string name="shop_sign_name">商家签名</string>
    <string name="shop_desc">商家简介</string>
    <string name="shop_area">所在小区</string>
    <string name="shop_position">商家位置</string>
    <string name="shop_category">经营类别</string>
    <string name="have_choice_position">已选择地图位置</string>
    <string name="not_choice_position">未选择地图位置</string>
    <string name="all_comment">全部评论</string>
    <string name="my_comment">我的评论</string>
    <string name="comment_me">评论我的</string>
    <string name="all_praise">所有点赞</string>
    <string name="praise_me">赞我的</string>
    <string name="my_praise">我赞的</string>
    <string name="come_from">来自</string>
    <string name="load_more_data">正在为你加载数据&#8230;</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="view_number">浏览</string>
    <string name="fans_number">粉丝</string>
    <string name="read_number">阅读</string>
    <string name="zhen_readed">朕已阅</string>
    <string name="bg_readed">本宫已阅</string>
    <string name="neighbour_left">邻里聊天</string>
    <string name="neighbour_right">社区贴吧</string>
    <string name="enter_merchant">入驻商家</string>
    <string name="concern_person">关注人数</string>
    <string name="send_message">发送</string>
    <string name="me_send_comment">你发表了评论</string>
    <string name="i_receive_comment">评论了你的发布</string>
    <string name="someone_praise_you">赞了你的发布</string>
    <string name="you_send_praise">你发出了赞</string>
    <string name="praise_success">赞一下成功</string>
    <string name="no_more_data_display">无更多数据显示</string>
    <string name="modify_info">修改</string>
    <string name="save_info">保存</string>
    <string name="max_text_number">500</string>
    <string name="can_not_send_message_to_self">不能给自己发送私信</string>
    <string name="much_more_view_number">1万+</string>
    <string name="net_off_line">网络连接不可用,请稍候再试</string>
    <string name="myfriend_rl">我关注的邻友</string>
    <string name="favorite_merchant_rl">我收藏的店铺</string>
    <string name="service_rl">与邻服务号</string>
    <string name="guess_love_rl">猜你喜欢</string>
    <string name="suggestion_error">投诉纠错</string>
    <string name="suggestion_error_desc">输入您的投诉或者纠错意见</string>
    <string name="suggestion_reback">意见建议</string>
    <string name="suggestion_reback_desc">输入您的意见建议</string>
    <string name="suggestion_recommend_merchant">推荐商家</string>
    <string name="suggestion_recommend_merchant_desc">请告知我们还未被收录的商家信息</string>
    <string name="suggestion_areainfo">推荐小区</string>
    <string name="suggestion_areainfo_desc">请告知我们还未被收录的小区信息</string>
    <string name="header_hint_refresh_normal">上拉刷新数据</string>
    <string name="header_hint_refresh_ready">释放后刷新数据</string>
    <string name="header_hint_refresh_loading">正在加载&#8230;</string>
    <string name="header_hint_refresh_time">更新时间：</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">释放后加载更多</string>
    <string name="neighbourhood_text">实时了解近邻小区生活状态</string>
    <string name="neighbourhoot_text_1">你能找到不一样的精彩</string>
    <string name="private_message_him">私信他</string>
    <string name="private_message_her">私信她</string>
    <string name="about_talk">邻里聊天:\n&#042;&#032;与邻生活聊天室里，都是你的邻居和近邻\n&#042;&#032;与小区邻居全天候实时零距离聊天\n&#042;&#032;你也可以去邻里小区看看近邻们都在聊什么，并加入他们\n&#042;&#032;有了全新、开放的与邻生活聊天室，再也不会被业主群的条条框框约束了……</string>
    <string name="about_post">社区贴吧:\n&#042;&#032;发贴的、看贴的，都是你的邻居和近邻\n&#042;&#032;分享社区生活、拼车、拼游、二手物品、兴趣小组……与你生活有关的，这里都有\n&#042;&#032;天然基于你的步行生活圈，每一个贴子都跟你有关……</string>

</resources>